--- a/admin.html
+++ b/admin.html
@@ -437,6 +437,16 @@
               <label for="ai-story-instr" class="block font-semibold mb-1">Additional Instructions <span class="text-gray-500">(optional)</span></label>
               <textarea id="ai-story-instr" rows="3" class="border rounded px-3 py-2 w-full" placeholder="Give extra context…"></textarea>
             </div>
+            <div class="mb-3">
+              <label for="ai-story-language" class="block font-semibold mb-1">Language</label>
+              <select id="ai-story-language" class="border rounded px-3 py-2 w-full">
+                <option value="en">English</option>
+                <option value="he">Hebrew</option>
+                <option value="es">Spanish</option>
+                <option value="fr">French</option>
+                <option value="ar">Arabic</option>
+              </select>
+            </div>
             <div class="flex items-center space-x-2">
               <button id="ai-story-submit" class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded">Generate</button>
               <button id="ai-story-cancel" class="bg-gray-300 hover:bg-gray-400 px-4 py-2 rounded">Cancel</button>
