Add global resources editor to admin.html and integrate scenario editing functionality in graph.js and scenarioTable.js. Update table.js to render global resource editor on story load, enhancing resource management capabilities.

--- a/admin.html
+++ b/admin.html
@@ -201,6 +201,8 @@
                     </select>
                 </div>
             </div>
+            <!-- Global Resources Editor -->
+            <div id="global-resources-area" class="my-6"></div>
             <!-- Cytoscape Graph Editor -->
             <div id="scenario-views" class="my-6"></div>
 
